--- a/index.css
+++ b/index.css
@@ -62,3 +62,29 @@ button {
 button:hover {
     background-color: #218838;
 }
+
+/*tryingmakethestyleof the quiz page*/
+h1 {
+    text-align: center;
+    margin-top: 20px;
+}
+
+form button {
+    margin-top: 20px;
+}
+
+/* Responsive Design */
+@media (max-width: 600px) {
+    header h1 {
+        font-size: 1.5rem;
+    }
+
+    nav a {
+        display: block;
+        margin: 10px 0;
+    }
+
+    form {
+        width: 90%;
+    }
+}
