--- a/src/about.css
+++ b/src/about.css
@@ -78,8 +78,10 @@ p, li {
 
 /* Application Images */
 img {
-    max-width: 100%;
+    max-width: 40%;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
     display: block;
     margin-top: 1rem;
 }
